# UGR-Seminar

controller/: main.ino
controller/main/: main.ino
server/: .env  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.py
server/src/: app.py  settings.py
server/src/database/: connections.py
server/src/templates/: index.html  table.html
